plugins {
	id 'org.springframework.boot' version '2.5.5'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.queen'
version = '0.0.1-SNAPSHOT'

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

allprojects {

	tasks.withType(JavaCompile) {
//        	options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED', '--enable-preview'])
//	        options.compilerArgs.addAll(['--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'])
        	options.compilerArgs.addAll(['--enable-preview'])
	        options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
	        options.encoding = 'UTF-8'
	        options.deprecation = true
    }
}

compileJava {
  options.warnings = true
  options.deprecation = true
  options.debug = true
  //options.compilerArgs += ["--add-modules=jdk.incubator.foreign"]
  options.incremental = false
}

configurations {
	compile.exclude module: 'spring-boot-starter-tomcat'
	compile.exclude module: 'org.springframework:spring-webmvc'
	compile.exclude module: 'spring-boot-starter-websocket'
	compile.exclude module:	'spring-web'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator:2.5.5'
	implementation 'org.springframework.boot:spring-boot-starter-cache:2.5.5'
	implementation 'org.springframework.boot:spring-boot-starter-hateoas:2.5.5'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.5.5'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:2.5.5'
	implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.5'
	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.5.5'
	implementation 'org.springframework.boot:spring-boot-starter-reactor-netty:2.5.5'
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc:2.5.5'
	implementation 'org.springframework.boot:spring-boot-starter-security:2.5.5'
	implementation 'org.springframework.security:spring-security-oauth2-jose:5.5.2'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	implementation 'com.fasterxml.jackson.core:jackson-core:2.13.0'
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.0'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.13.0'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'
	implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.13.0'
	implementation 'org.springframework.hateoas:spring-hateoas:1.3.4'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2',
			// Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
			'org.bouncycastle:bcprov-jdk15on:1.69',
			'io.jsonwebtoken:jjwt-jackson:0.11.2' // or 'io.jsonwebtoken:jjwt-gson:0.11.2' for gson
	runtimeOnly 'org.postgresql:postgresql:42.2.24.jre7'
	runtimeOnly 'com.h2database:h2:1.4.200'
	runtimeOnly 'io.r2dbc:r2dbc-postgresql:0.8.10.RELEASE'
	runtimeOnly 'io.r2dbc:r2dbc-h2:0.8.4.RELEASE'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.5'
	testImplementation 'io.projectreactor:reactor-test:3.4.10'
	testImplementation 'org.springframework.security:spring-security-test:5.5.2'
}

test {
      useJUnitPlatform()
      //jvmArgs '--add-modules=jdk.incubator.foreign'
}
